Worked on server-client tcp connection. Server side is done, can be tested with "ncat 129.0.0.1 9005" but the client side is still to be done. Server broadcast fixed. Changed Server class to implement runnable. ClientServerTest, unfinished.